--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,21 @@
-<h1>Sistema de Galpões e Estoque</h1>
+<section id="warehouses">
+  <h2>Galpões</h2>
+  <% @warehouses.each do |w| %>
+    <div>
+      <h3><%= link_to(w.name, warehouse_path(w.id)) %></h3>
+      <dl>
+        <dt>Código:</dt>
+        <dd><%= w.code %></dd>
+        <dt>Cidade:</dt>
+        <dd><%= w.city %></dd>
+        <dt>Área:</dt>
+        <dd><%= w.area %> m2</dd>
+      </dl>
+    </div>
+    <br>
+  <% end %>
 
-<h2>Galpões</h2>
-
-<% @warehouses.each do |w| %>
-
-  <%= link_to(w.name, warehouse_path(w.id)) %>
-  Código: <%= w.code %>
-  Cidade: <%= w.city %>
-  <%= w.area %> m2
-  <br>
-<% end %>
-
-<% if @warehouses.empty? %>
-<p> Não existem galpões cadastrados </p>
-<% end  %>
+  <% if @warehouses.empty? %>
+  <p> Não existem galpões cadastrados </p>
+  <% end  %>
+</section>
