--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -1,11 +1,21 @@
-
-<h1>Galpão <%= @warehouse.code %></h1>
-<h2><%= @warehouse.description %></h2>
-<div>
-  <strong>Nome: <%= @warehouse.name %></strong>
-  <strong>Cidade: <%= @warehouse.city %></strong>
-  <strong>Área: <%= @warehouse.area %> m2</strong>
-  <strong>Endereço: <%= @warehouse.address %> CEP:<%= @warehouse.cep %></strong>
-</div>
-
-<%= link_to 'Voltar', root_path %>
+<section id="warehouse_detail">
+  <div>
+    <h2>Galpão <%= @warehouse.code %></h2>
+    <h3><%= @warehouse.description %></h3>
+    <dl>
+      <dt><strong>Nome:</strong></dt>
+      <dd><%= @warehouse.name %></dd>
+      <dt><strong>Cidade:</strong></dt>
+      <dd><%= @warehouse.city %></dd>
+      <dt><strong>Área:</strong></dt>
+      <dd><%= @warehouse.area %> m2</dd>
+      <dt><strong>Endereço:</strong></dt>
+      <dd><%= @warehouse.address %></dd> 
+      <dt><strong>CEP:</strong></dt>
+      <dd><%=@warehouse.cep %></dd>
+    </dl>
+  </div>
+  
+  <br>
+  <%= link_to 'Voltar', root_path %>
+</section>
