--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
       <h1>Sistema de Galpões e Estoque</h1>
     </header>
     <main>
+      <div>
+        <%= notice %>
+      </div>
       <%= yield %>
     </main>  
   </body>
