--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -17,5 +17,6 @@
   </div>
   
   <br>
+  <%= link_to 'Editar', edit_warehouse_path(@warehouse.id) %>
   <%= link_to 'Voltar', root_path %>
 </section>
