--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application" %>
   </head>
-
   <body>
     <header>
       <h1>Sistema de Galpões e Estoque</h1>
+      <nav>
+        <%= link_to 'Fornecedores', suppliers_path %>
+      </nav>
     </header>
     <main>
       <div>
+        <%= alert %>
         <%= notice %>
       </div>
       <%= yield %>
