Usuário cadastra Modelo de Produto

--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -17,7 +17,7 @@
   
 <hr>
 </div>
-
+</section>
 <div>
   <%= link_to 'Home', root_path  %> | <%= link_to 'Editar', edit_supplier_path(@supplier) %>
 </div>
