Usuário vê detalhes dos modelos de produtos

--- a/app/views/product_models/show.html.erb
+++ b/app/views/product_models/show.html.erb
@@ -16,5 +16,5 @@
 </section>
 
 <div>
-  <%= link_to 'Home', root_path  %>
+  <%= link_to 'Home', root_path %> | <%= link_to 'Voltar', product_models_path %>
 </div>
